# docs/backend/openapi.json
@@ -169,6 +169,23 @@
         ],
         "summary": "Delete My Account",
         "operationId": "delete_my_account_api_users_me_delete",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "anyOf": [
+                  {
+                    "$ref": "#/components/schemas/AccountDeletionRequest"
+                  },
+                  {
+                    "type": "null"
+                  }
+                ],
+                "title": "Payload"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -177,6 +194,16 @@
                 "schema": {
                   "type": "object",
                   "title": "Response Delete My Account Api Users Me Delete"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
                 }
               }
             }
@@ -1870,6 +1897,31 @@
           "type"
         ],
         "title": "ValidationError"
+      },
+      "AccountDeletionRequest": {
+        "properties": {
+          "reason": {
+            "anyOf": [
+              {
+                "type": "string",
+                "enum": [
+                  "low_usage",
+                  "missing_features",
+                  "difficult_to_use",
+                  "privacy_concerns",
+                  "restart_account",
+                  "other"
+                ]
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Reason"
+          }
+        },
+        "type": "object",
+        "title": "AccountDeletionRequest"
       }
     },
     "securitySchemes": {
